KL mobile mainnav spacing fix attempt v7
started adjusting #hero, .hero_slider style instead of #hero-section #mobile-nav, #subpage-hero #mobile-nav {

--- a/style.css
+++ b/style.css
@@ -4566,7 +4566,7 @@ span.highlight {
 	text-align: center;
 	padding: 0;
 	color: white;
-	height: calc(100vh - 65px); /*100vh - 65px*/
+	height: calc(103vh - 65px); /*100vh - 65px*/
 
 	-webkit-transform-style: preserve-3d;
   	-moz-transform-style: preserve-3d;
@@ -4721,7 +4721,7 @@ span.highlight {
 }
 #hero-section #mobile-nav, #subpage-hero #mobile-nav {
 	position: absolute;
-	bottom: 9.5vh;
+	bottom: 8vh;
 	left: 0;
 	padding: 0 20px;
 	width: 100%;
